--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -33,9 +33,9 @@
                             <div class="dropdown">
                                 <a href="#" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
-                                    <a href="#">My Subjects</a>
+                                    <a href="javascript:void(0)" routerLink="/my-subjects">My Subjects</a>
                                     <a href="javascript:void(0)" routerLink="/create-subject">Create Subject</a>
-                                    <a href="#">All Subjects</a>
+                                    <a href="javascript:void(0)" routerLink="/all-subjects">All Subjects</a>
                                 </div>
                             </div>
                         </li>
@@ -61,8 +61,8 @@
                             <div class="dropdown">
                                 <a href="#" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
-                                    <a href="#">My Subjects</a>
-                                    <a href="#">All Subjects</a>
+                                    <a href="javascript:void(0)" routerLink="/my-subjects">My Subjects</a>
+                                    <a href="javascript:void(0)" routerLink="/all-subjects">All Subjects</a>
                                 </div>
                             </div>
                         </li>
