--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -43,7 +43,7 @@
                             <div class="dropdown">
                                 <a href="#" class="dropdown-btn underline">Students</a>
                                 <div class="dropdown-content">
-                                    <a href="#">Pending Applications</a>
+                                    <a href="javascript:void(0)" routerLink="/pending-applications">Pending Applications</a>
                                     <a href="#">All Students</a>
                                 </div>
                             </div>
