View and staling added.

--- a/src/app/application/application-details/application-details.component.html
+++ b/src/app/application/application-details/application-details.component.html
@@ -1,1 +1,97 @@
-<p>application-details works!</p>
+<div class="application-details">
+    <div class="grid-teil">
+        <div class="title">
+            <span>Name & Birth Date</span>
+        </div>
+        <div class="info">
+            <div class="group">
+                <div class="undertitle">
+                    <span>First Name</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="Boris" disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>Last Name</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="Emilov" disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>Date Of Birth</span>
+                </div>
+                <div class="content">
+                    <input type="date" value="2322-11-01" disabled>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="grid-teil">
+        <div class="title">
+            <span>Contact</span>
+        </div>
+        <div class="info">
+            <div class="group">
+                <div class="undertitle">
+                    <span>Mobile Number</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="0184 5656 5664" disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>Home Number</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="032 68 55 99" disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>Email</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="some-email@gmail.com" disabled>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="grid-teil">
+        <div class="title">
+            <span>Address</span>
+        </div>
+        <div class="info">
+            <div class="group">
+                <div class="undertitle">
+                    <span>Street</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="SomeLongStr." disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>House Number</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="34a" disabled>
+                </div>
+            </div>
+            <div class="group">
+                <div class="undertitle">
+                    <span>City</span>
+                </div>
+                <div class="content">
+                    <input type="text" value="Varna" disabled>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
