--- a/src/app/application/application-documents/application-documents.component.html
+++ b/src/app/application/application-documents/application-documents.component.html
@@ -1,1 +1,23 @@
-<p>application-documents works!</p>
+<div class="application-uploaded-documents">
+
+    <div class="document">
+
+        <div class="file-icon-container">
+            <img src="../../public/icons/pdf/128.png" alt="file icon">
+        </div>
+
+        <div class="info">
+            <div class="name-container">
+                <span>Name of the uploaded file comes here. Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit. Quam, voluptatem!</span>
+            </div>
+        </div>
+
+        <div class="controls">
+            <button class="green-btn">Download</button>
+            <button class="red-btn">Delete</button>
+        </div>
+
+    </div>
+
+</div>
