--- a/src/app/application/pending-applications/pending-applications.component.html
+++ b/src/app/application/pending-applications/pending-applications.component.html
@@ -4,36 +4,39 @@
     </div>
     <div class="search-container">
         <label for="serach-text">Search:</label>
-        <input type="text" id="serach-text" placeholder="Students name">
-        <input type="text" id="serach-text" placeholder="Student ID">
-        <button class="yellow-btn">Search</button>
+        <input type="text" id="serach-text" placeholder="Students First Name" #firstName>
+        <input type="text" id="serach-text" placeholder="Students Last Name" #lastName>
+        <input type="text" id="serach-text" placeholder="Applicant ID" #displayId>
+        <button class="yellow-btn" (click)="search(firstName.value, lastName.value, displayId.value)">Search</button>
     </div>
 
-    <div class="applications-container">
+    @if(pendingApplications()?.results?.length) {
+        <div class="applications-container">
+            <div class="all-applications-container">
 
-        <div class="all-applications-container">
-
-            <div class="single-application">
-                <div class="student-photo">
-                    <img src="../../public/profile-photos/test-profile-picture-1.jpg" alt="photo if student">
-                </div>
-                <div class="application-name">
-                    <p>Ivan Petrov</p>
-                </div>
-                <div class="application-id">
-                    <p>StudentID 234dfs</p>
-                </div>
-                <div class="control">
-                    <button class="yellow-btn">View Student Profile</button>
-                </div>
+                @for (app of pendingApplications()?.results; track $index) {
+                    <div class="single-application">
+                        <div class="student-photo">
+                            <img src="{{baseUrlForPicture()}}{{app.profilePictureId}}" alt="photo if student">
+                        </div>
+                        <div class="application-name">
+                            <p>{{app.applicantName}}</p>
+                        </div>
+                        <div class="application-id">
+                            <p>StudentID {{app.displayId}}</p>
+                        </div>
+                        <div class="control">
+                            <button class="yellow-btn" (click)="viewApp(app._id)">View Application</button>
+                        </div>
+                    </div>
+                }
+       
             </div>
-   
         </div>
-
-    </div>
-
-    <div class="no-results">
-        <span>No results!</span>
-    </div>
+    } @else {
+        <div class="no-results">
+            <span>No results!</span>
+        </div>
+    }
 
 </div>
