Application details view added.

--- a/src/app/application/application-details/application-details.component.html
+++ b/src/app/application/application-details/application-details.component.html
@@ -9,7 +9,7 @@
                     <span>First Name</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Boris" disabled>
+                    <input type="text" value="{{appData()?.applicant?.firstName}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -17,7 +17,7 @@
                     <span>Last Name</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Emilov" disabled>
+                    <input type="text" value="{{appData()?.applicant?.lastName}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -25,7 +25,7 @@
                     <span>Date Of Birth</span>
                 </div>
                 <div class="content">
-                    <input type="date" value="2322-11-01" disabled>
+                    <input type="date" value="{{appData()?.applicant?.dateOfBirth}}" disabled>
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
                     <span>Mobile Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="0184 5656 5664" disabled>
+                    <input type="text" value="{{appData()?.applicant?.mobileNumber}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -48,7 +48,7 @@
                     <span>Home Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="032 68 55 99" disabled>
+                    <input type="text" value="{{appData()?.applicant?.homeNumber}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -56,7 +56,7 @@
                     <span>Email</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="some-email@gmail.com" disabled>
+                    <input type="text" value="{{appData()?.applicant?.email}}" disabled>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                     <span>Street</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="SomeLongStr." disabled>
+                    <input type="text" value="{{appData()?.applicant?.street}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -79,7 +79,7 @@
                     <span>House Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="34a" disabled>
+                    <input type="text" value="{{appData()?.applicant?.houseNumber}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -87,7 +87,7 @@
                     <span>City</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Varna" disabled>
+                    <input type="text" value="{{appData()?.applicant?.city}}" disabled>
                 </div>
             </div>
 
