Link fixed ti not reload the page on click.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -59,7 +59,7 @@
                     <ul>
                         <li>
                             <div class="dropdown">
-                                <a href="#" class="dropdown-btn underline">Subjects</a>
+                                <a href="javascript:void(0)" routerLink="/all-subjects" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
                                     <a href="javascript:void(0)" routerLink="/my-subjects">My Subjects</a>
                                     <a href="javascript:void(0)" routerLink="/all-subjects">All Subjects</a>
