Checker for teacher upadated.

--- a/src/app/subjects/subject/subject-participants/subject-participants.component.html
+++ b/src/app/subjects/subject/subject-participants/subject-participants.component.html
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                 </div>
-                @if (showTeacherControls()) {
+                @if (isTeacherCreator()) {
                     <div class="teacher-participant-controls">
                         <button class="green-btn">View Profile</button>
                         <button class="red-btn">Remove</button>
