Datetime formatting added.

--- a/src/app/subjects/subject/subject-announcements/subject-announcements.component.html
+++ b/src/app/subjects/subject/subject-announcements/subject-announcements.component.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="datetime-container">
                             <p>
-                                TODO format {{elem.dateTime}}
+                                {{format(elem.dateTime)}}
                             </p>
                         </div>
                     </div>
