--- a/src/app/subjects/subject/subject-assignments/subject-assignments.component.html
+++ b/src/app/subjects/subject/subject-assignments/subject-assignments.component.html
@@ -1,1 +1,168 @@
-<p>subject-assignments works!</p>
+<div class="assignments-container">
+    @if (isTeacherCreator()) {
+        <div class="assignment-creator">
+            <form class="custom-file-upload-form" [formGroup]="form" (ngSubmit)="createAssignment()">
+                <div class="group">
+                    <div class="label-container">
+                        <label for="title">Title</label>
+                    </div>
+                    <input type="text" id="title" (onChange)="validate('title')" formControlName='title' [class]="validationLib.title.validationClass">
+                    @if (validationLib.title.showErrMsg) {
+                        <div class="error-msg-container">
+                            <span class="error">Please enter the title.</span>
+                        </div>
+                    }
+                </div>
+                <div class="group">
+                    <div class="label-container">
+                        <label for="deadline">Deadline</label>
+                    </div>
+                    <input type="datetime-local" id="deadline" (onChange)="validate('deadline')" formControlName='deadline' [class]="validationLib.deadline.validationClass">
+                    @if (validationLib.deadline.showErrMsg) {
+                        <div class="error-msg-container">
+                            <span class="error">Please enter the deadline.</span>
+                        </div>
+                    }
+                </div>
+                <div class="group">
+                    <div class="label-container">
+                        <label for="description">Description</label>
+                    </div>
+                    <textarea name="description" id="description" (onChange)="validate('description')" formControlName='description'></textarea>
+                    @if (validationLib.description.showErrMsg) {
+                        <div class="error-msg-container">
+                            <span class="error">Please enter the description.</span>
+                        </div>
+                    }
+                </div>
+                <div class="group add-margin-top">
+                    <div class="label-container">
+                        <label>File to upload</label>
+                    </div>
+                    <label for="resourceFileUpload" class="single-custom-file-upload-btn">Select File
+                        <input type="file" id="resourceFileUpload" (change)="onResourceFileSelect($event)">
+                    </label>
+                    <div class="single-selected-file-name-container add-margin-top">
+                        <span>{{resourceFileName()}}</span>
+                    </div>
+                </div>
+                <button class="add-margin-top green-btn">Create Assignment</button>
+                <button class="add-margin-top red-btn" type="button" (click)="onClearFile()">Clear File</button>
+                <button class="add-margin-top red-btn" type="button" (click)="onClearAllFields()">Clear All Fields</button>
+            </form>
+        </div>
+    }
+    @if (subject()?.assignments?.length) {
+        @for (assignment of subject()?.assignments; track $index) {
+            <div class="assignment">
+                <div class="title-deadline-container">
+                    <div class="title">
+                        <p>{{assignment.title}}</p>
+                    </div>
+                    <div class="deadline">
+                        <p>Deadline: {{format(assignment.deadline)}}</p>
+                    </div>
+                </div>
+                <div class="first">
+                    <div class="info">
+                        <div class="description-container">
+                            <p>{{assignment.description}}</p>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="assignment-controls">
+                    @if (assignment.resource) {
+                        <button class="green-btn">Download Resources</button>
+                    }
+                    @if (isTeacherCreator()) {
+                        <button class="red-btn">Delete Assignment</button>
+                    }
+                </div>
+                @if (isParticipantViewing()) {
+                    <div class="uploaded-solution-container">
+                        <div class="label-container ">
+                            <label class="title">Current uploaded solution</label>
+                        </div>
+                        <div class="solution-container">
+                            @if (assignment.assignmentSubmitions?.length) {
+                                @if (getSolutionData(assignment._id)) {
+                                    <span><a href="javacript:void(0)" (click)="downloadSolution(getSolutionData(assignment._id)?.fileId)">{{getSolutionData(assignment._id)?.fileName}}</a></span>
+                                } @else {
+                                    <span>No submitions.</span>
+                                }
+                            } @else {
+                                <span>No submitions.</span>
+                            }
+                        </div>
+                    </div>
+                }
+                @if (isParticipantViewing() && !deadlinePassed(assignment._id)) {
+                <!-- @if (true) { -->
+                    <div class="assigment-file-upload-container">
+                        <form class="custom-file-upload-form">
+                            <div class="group">
+                                <div class="label-container ">
+                                    <label class="container-title">Upload solution</label>
+                                </div>
+                            </div>
+                            <div class="group">
+                                <div>
+                                    <label class="upload-description">Solutions may be uploaded until the deadline. Only the last solution uploaded is saved.</label>
+                                </div>
+                            </div>
+                            <div class="group add-margin-top">
+                                <div class="label-container">
+                                    <label>File to upload</label>
+                                </div>
+                                <label for="{{assignment._id}}" class="single-custom-file-upload-btn">Select File
+                                    <input type="file" [id]="assignment._id" (change)="updateSolutionFileName($event, assignment._id)">
+                                </label>
+                                <div class="single-selected-file-name-container add-margin-top">
+                                    <span id="solutionFileName{{assignment._id}}">No file chosen.</span>
+                                </div>
+                            </div>
+                            <button class="add-margin-top green-btn" type="button" (click)="submitSolution(assignment._id)">Submit</button>
+                        </form>
+                    </div>
+                }
+                @if (isTeacherCreator()) {
+                <!-- @if (true) { -->
+                    <div class="all-uploaded-solutions-from-students-container">
+                        <div class="label-container ">
+                            <label class="title">All students solution uploads</label>
+                        </div>
+                    @if (assignment.assignmentSubmitions?.length) {
+                        @for (solution of assignment.assignmentSubmitions; track $index) {
+
+                            <div class="solution-container">
+                                <div class="student-name">
+                                    <p>{{solution.student.firstName}} {{solution.student.lastName}}</p>
+                                </div>
+                                <div class="student-id">
+                                    <p>ID {{solution.student.displayId}}</p>
+                                </div>
+                                <div class="solution">
+                                    <button class="green-btn" type="button" (click)="downloadSolution(solution.document._id)">Download Solution</button>
+                                </div>
+                                <div class="control">
+                                    <button class="yellow-btn" type="button" (click)="openStudentProfile(solution.student._id)">View Profile</button>
+                                </div>
+                            </div>
+    
+                        }
+                    } @else {
+                        <div class="no-results">
+                            <span>No solutions uploaded.</span>
+                        </div>
+                    }   
+                    </div>
+                }
+            </div>
+        }
+    } @else {
+        <div class="no-results">
+            <span>No assignments.</span>
+        </div>
+    } 
+</div>
