--- a/src/app/subjects/subject/subject-details/subject-details.component.css
+++ b/src/app/subjects/subject/subject-details/subject-details.component.css
@@ -48,11 +48,13 @@
 .subject-details-view .teacher-pic-container {
     position: relative;
     width: 150px;
-    height: 400px;
+    height: 200px;
     z-index: 3;
     img {
         border: 4px solid var(--black);
         transform: translateZ(400px);
+        position: absolute;
+        top: -80px;
         max-width: 100%;
         height: auto;
     }
